added home button

--- a/enterprise-ios/tutorial1/tutorial1.html
+++ b/enterprise-ios/tutorial1/tutorial1.html
@@ -19,6 +19,9 @@
           <a id="forkme_banner" href="https://github.com/quintonwall">View on GitHub</a>
 
           <h1 id="project_title">Designing Enterprise Mobile Apps With iOS and Salesforce</h1>
+          <p><a class="btn btn-primary btn-lg" style="background-color: transparent;color: #00A1E1;"
+                  href="../index.html"
+                      role="button">Start Now</a></p>
           <h2 id="project_tagline"></h2>
 
         </header>
@@ -27,6 +30,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+        
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>I. Enterprise Mobile App Prototypes with Flinto</h3>
 
