--- a/enterprise-ios/template.html
+++ b/enterprise-ios/template.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Quinton Wall : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/bootstrap.min.css">
+
 
     <title>Designing Enterprise Mobile Apps With iOS and Salesforce</title>
   </head>
@@ -20,7 +22,15 @@
 
           <h1 id="project_title">Designing Enterprise Mobile Apps With iOS and Salesforce</h1>
           <h2 id="project_tagline"></h2>
+<p><center><a class="btn btn-primary btn-lg" style="background-color: transparent;color: #00A1E1;"
+                  href="../index.html"
+                      role="button">Series Home</a></center></p>
+          <h2 id="project_tagline"></h2>
+          <div class="row" style="text-align: center">
+            <a href="https://twitter.com/share" class="twitter-share-button" data-via="quintonwall">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
+          </div>
         </header>
     </div>
 
