--- a/enterprise-ios/index.html
+++ b/enterprise-ios/index.html
@@ -50,7 +50,7 @@ Almost every customer I talk to gets stuck on how to start designing their mobil
 <h4>II. Using Sketch To Design Your App</h4>
 Like most of our there, we are not design experts, but that doesn't mean you can't create beautiful apps. This tutorial will take our basic prototypes and add some design using Sketch.
 
-<h4>III. Prepare Your Base App with Swift and the Salesforce Mobile SDK</h4>
+<h4><a href="tutorial3/tutorial3.html">III. Prepare Your Base App with Swift and the Salesforce Mobile SDK</a></h4>
 The Mobile SDK currently provides Objective-C based template projects. This tutorial shows you how to take these template projects, show you how to handle authentication, and quickly make them Swift and Storyboard ready.
 
 <h4>IV. Create A Table Based App</h4>
