added link to swift base project repo

--- a/enterprise-ios/tutorial3/tutorial3.html
+++ b/enterprise-ios/tutorial3/tutorial3.html
@@ -163,7 +163,7 @@
 
 <p>Your app template is done. Click run to test it. </p>
 
-<p>Great job! You just created a bridge from Objective-C to Swift, and created a Storyboard and Controller to start building your app with the very latest tools.</p>
+<p>Great job! You just created a bridge from Objective-C to Swift, and created a Storyboard and Controller to start building your app with the very latest tools. Hopefully you followed along, otherwise you can grab the complete code from <a href="https://github.com/quintonwall/salesforce-swift-base">here.</a></p>
 
 
 <a href="https://twitter.com/share" class="twitter-share-button" data-via="quintonwall">Tweet</a>
