--- a/enterprise-ios/index.html
+++ b/enterprise-ios/index.html
@@ -42,7 +42,7 @@
 <p>But that's enough talking. Let's get into the tutorials.</p>
 
 <h3>The Tutorials</h3>
-The list of tutorials below provide a path to begin your journey in learning Swift and building enterprise mobile apps. These tutorials are intended to be a living, and evolving, resource. The goal is to produce a new tutorial roughly every week. 
+The list of tutorials below provide a path to begin your journey in learning Swift and building enterprise mobile apps. These tutorials are intended to be a living, and evolving, resource. The goal is to produce a new tutorial roughly each week. 
 
 <h4><a href="tutorial1/tutorial1.html">I. Enterprise Mobile App Prototypes with Flinto</a></h4>
 Almost every customer I talk to gets stuck on how to start designing their mobile app. This tutorial covers some very simple prototype techniques using pen and paper, and Flinto, a rapid prototyping tool to get user feedback early.
