changed github link

--- a/enterprise-ios/template.html
+++ b/enterprise-ios/template.html
@@ -18,8 +18,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/quintonwall">View on GitHub</a>
-
+          <a id="forkme_banner" href="https://github.com/quintonwall/quintonwall.github.io/tree/master/enterprise-ios">Download entire series</a>
           <h1 id="project_title">Designing Enterprise Mobile Apps With iOS and Salesforce</h1>
           <h2 id="project_tagline"></h2>
 <p><center><a class="btn btn-primary btn-lg" style="background-color: transparent;color: #00A1E1;"
