--- a/enterprise-ios/index.html
+++ b/enterprise-ios/index.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/quintonwall">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/quintonwall/quintonwall.github.io/tree/master/enterprise-ios">Download entire series</a>
 
           <h1 id="project_title">Designing Enterprise Mobile Apps With iOS and Salesforce</h1>
           <h2 id="project_tagline"></h2>
