--- a/enterprise-ios/tutorial1/tutorial1.html
+++ b/enterprise-ios/tutorial1/tutorial1.html
@@ -43,13 +43,13 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>I. Enterprise Mobile App Prototypes with Flinto</h3>
 
-<p>In the rush to get products, especially mobile apps, to market, we often forget about the importance of design and early user feedback. If we take one thing away from the explosion of beautiful consumer apps, it is this: design can make or break the user experience of even the most useful app. As more enterprises build mobile apps for customers, employees, and partners, a rapid approach to design and feedback is needed.</p>
+<p>In the rush to get products, especially mobile apps, to market we often forget about the importance of design and early user feedback. If we take one thing away from the explosion of beautiful consumer apps, it is this: design can make or break the user experience of even the most useful app. As more enterprises build mobile apps for customers, employees, and partners, a rapid approach to design and feedback is needed.</p>
 
-<p>Yes, a great UX designer makes a huge difference, but it doesn't take an expert to build a well designed app. This tutorial will teach you the basics of lo-fidelity wireframe technics, and introduce you to a number of tools to help you start you on your journey to build enterprise mobile apps your users will love.</p>
+<p>Yes, a great UX designer makes a huge difference, but it doesn't take an expert to build a well designed app. This tutorial will teach you the basics of lo-fidelity wireframe techniques, and introduce you to a number of tools to help you start you on your journey to build enterprise mobile apps your users will love.</p>
 
 <h3 id="salesforcetasks">Salesforce Tasks</h3>
 
-<p>Throughout this series of tutorials we are going to build a task tracking app. Why? After meeting with the business leads of our fictitious company, we discovered that our users, who already use Salesforce for numerous functions: sales, service, marketing, etc. but don't make use of the tasks and activities feature; instead they use various reminder apps, none of which are synced with Salesforce. Making a task tracking app that is connected to Salesforce allows users to share and assign tasks across organizations, and also centralize and report of progress. </p>
+<p>Throughout this series of tutorials we are going to build a task tracking app. Why? After meeting with the business leads of our fictitious company, we discovered that our users, who already use Salesforce for numerous functions: sales, service, marketing, etc. don't make use of the tasks and activities feature; instead they use various reminder apps, none of which are synced with Salesforce. Making a task tracking app that is connected to Salesforce allows users to share and assign tasks across organizations, and also centralize and report on progress. </p>
 
 <h4 id="gettingstarted">Getting Started</h4>
 
@@ -65,7 +65,7 @@
 <li>Allow the user to change the status or priority of a task.</li>
 </ul>
 
-<p>Note that, for now, our app design doesn't allow the creation of tasks on the mobile app. We can add this later, if needed, but it does require some additional support to handle potentially adding contacts, and a few other related records. For now, let's keep it simple, and iterate later.</p>
+<p>Note that, for now, our app design doesn't allow the creation of tasks on the mobile app. We can add this later, if needed, but it does require some additional support to handle adding contacts, and a few other related records. For now, let's keep it simple, and iterate later.</p>
 
 <h4 id="drawyourwireframeprototype">Draw your wireframe prototype</h4>
 
