--- a/enterprise-ios/tutorial3/tutorial3.html
+++ b/enterprise-ios/tutorial3/tutorial3.html
@@ -46,21 +46,21 @@
 
 <h4 id="thesalesforcemobilesdkforios">The Salesforce Mobile SDK for iOS</h4>
 
-<p>The Salesforce Mobile SDK for iOS provides a complete series of libraries and framework for authenticating against, and accessing the Salesforce1 Rest APIs. The Mobile SDK also contains a number of other incredibly useful features including SmartSync, a framework for offline data sync, and SmartStore, for secure data storage. We will cover SmartSync, and SmartStore, in later tutorials. For now, we will focus on our two primary needs: authentication, and access to data.</p>
+<p>The Salesforce Mobile SDK for iOS provides a complete series of libraries and framework for authenticating against, and accessing the Salesforce1 RESTful APIs. The Mobile SDK also contains a number of other incredibly useful features including SmartSync, a framework for offline data sync, and SmartStore, for secure data storage. We will cover SmartSync, and SmartStore, in later tutorials. For now, we will focus on our two primary needs: authentication, and access to data.</p>
 
 <h4 id="gettingstarted">Getting Started</h4>
 
-<p>The Mobile SDK gives you a <a href="https://github.com/forcedotcom/SalesforceMobileSDK-iOS">number of options to get started</a>, but as mentioned in tutorial I, we are going to keep things simple and provided the fastest way for you to get going. This means installing a few applications to start. A quick note just in case you are branding new to building iOS apps; iOS apps can only be built on a mac (sorry PC folks). All of the instructions in this tutorial assume that you are using a current version of OSX, preferably Yosemite.</p>
+<p>The Mobile SDK gives you a <a href="https://github.com/forcedotcom/SalesforceMobileSDK-iOS">number of options to get started</a>, but as mentioned in tutorial I, we are going to keep things simple and provided the fastest way for you to get going. This means installing a few applications to start. A quick note just in case you are brand new to building iOS apps; iOS apps can only be built on a mac (sorry PC folks). All of the instructions in this tutorial assume that you are using a current version of OSX, preferably Yosemite.</p>
 
 <h4 id="installnode.js">Install Node.js</h4>
 
 <p>Node.js is a popular programming language for the web. We are not going to use Node.js at all, but use a packaging app called NPM. The easiest way to get NPM is install Node.js - it comes bundled together.</p>
 
-<p>If you don't have Node.js, no problem - installing Node.js is a snap. Go to <a href="http://nodejs.org">nodejs.org</a>, click the install button, the install the package which downloads. Accept the defaults, but don't hit close just yet. Make sure you take a few minutes to read the PATH instructions to make sure /usr/local/bin is in your PATH</p>
+<p>If you don't have Node.js, no problem - installing Node.js is a snap. Go to <a href="http://nodejs.org">nodejs.org</a>, click the install button, the install the downloaded package. Accept the defaults, but don't hit close just yet. Make sure you take a few minutes to read the PATH instructions to make sure /usr/local/bin is in your PATH</p>
 
 <h4 id="installforceios">Install forceios</h4>
 
-<p>Forceios is a handy little binary for creating base projects already configured to connect to the Salesforce1 Platform. Go ahead an open up a terminal window and execute the following command to install forceios:</p>
+<p>Forceios is a handy little binary for creating base projects already configured to connect to the Salesforce1 Platform. Go ahead and open up a terminal window, then execute the following command to install forceios:</p>
 
 <p><code>sudo npm install forceios -g</code></p>
 
@@ -86,7 +86,7 @@
 
 <h4 id="theswiftprogramminglanguage">The Swift Programming Language</h4>
 
-<p>Last year at WWDC Apple surprised us all by releasing an entirely new programming language for developing OSX and iOS apps, called Swift. Since it's release, Swift has rapidly grown to one of the most popular languages in the world. But this rapid change and adoption, does create some challenges: the Mobile SDK is written using Objective-C, and our starter project is also written in Objective-C. </p>
+<p>Last year at WWDC Apple surprised us all by releasing an entirely new programming language for developing OSX and iOS apps called Swift. Since it's release, Swift has rapidly grown to one of the most popular languages in the world. But this rapid change and adoption, does create some challenges: the Mobile SDK is written using Objective-C, and our starter project is also written in Objective-C. </p>
 
 <p>Thankfully, we can leverage both Objective-C and Swift in the same project. Just like designing our prototypes, spending a little bit of effort creating a bridge from Objective-C to Swift in our project will allow us to write almost all of our app in Swift. This means that not only are we going to create a killer Tasks app, we are also going to learn one of the hottest languages around right now!</p>
 
@@ -110,7 +110,7 @@
 
 <h4 id="usingstoryboards">Using Storyboards</h4>
 
-<p>Another recent addition to the iOS Developer's toolkit is Storyboards. Storyboards allow you to visually layout you app screens in a single place. These storyboards function just like their real world counterpart for storyboarding scenes in a movie. In fact, screens in iOS storyboard-parlayance are actually called scenes. The best thing about storyboards though, is that they make it incredibly easy to visually describe scene transitions, called seques (pronounced segway). </p>
+<p>Another recent addition to the iOS Developer's toolkit is Storyboards. Storyboards allow you to visually lay out you app screens in a single place. These storyboards function just like their real world counterpart for storyboarding scenes in a movie. In fact, screens in iOS storyboard-parlayance are actually called scenes. The best thing about storyboards though, is that they make it incredibly easy to visually describe scene transitions, called seques (pronounced segway). </p>
 
 <p>Right now, the generated XCode Project uses XIB files, which is an older approach to creating scenes. Thankfully it doesn't take much to support storyboards.</p>
 
