--- a/enterprise-ios/index.html
+++ b/enterprise-ios/index.html
@@ -44,64 +44,66 @@
 <h3>The Tutorials</h3>
 The list of tutorials below provide a path to begin your journey in learning Swift and building enterprise mobile apps. These tutorials are intended to be a living, and evolving, resource. The goal is to produce a new tutorial roughly each week. 
 
-<h4><a href="tutorial1/tutorial1.html">I. Enterprise Mobile App Prototypes with Flinto</a></h4>
+<h4><a href="tutorial1/tutorial1.html">Enterprise Mobile App Prototypes with Flinto</a></h4>
 Almost every customer I talk to gets stuck on how to start designing their mobile app. This tutorial covers some very simple prototype techniques using pen and paper, and Flinto, a rapid prototyping tool to get user feedback early.
 
-<h4>II. Using Sketch To Design Your App</h4>
+<h4>Using Sketch To Design Your App</h4>
 Like most of our there, we are not design experts, but that doesn't mean you can't create beautiful apps. This tutorial will take our basic prototypes and add some design using Sketch.
 
-<h4><a href="tutorial3/tutorial3.html">III. Prepare Your Base App with Swift and the Salesforce Mobile SDK</a></h4>
+<h4><a href="tutorial3/tutorial3.html">Prepare Your Base App with Swift and the Salesforce Mobile SDK</a></h4>
 The Mobile SDK currently provides Objective-C based template projects. This tutorial shows you how to take these template projects, show you how to handle authentication, and quickly make them Swift and Storyboard ready.
 
-<h4>IV. Create A Table Based App</h4>
-Almost every iOS app uses a TableView for displaying data. For enterprise apps, understanding how to work with the TableView controls is critical. This tutorial will provide an introduction.
-
-<h4>V. Working With Salesforce Data</h4>
+<h4><a href="tutorial4/tutorial4.html">Querying Salesforce Data</a></h4>
 Now that we have a basic idea of working with tables, we need to learn how to call and handle data from the Salesforce REST APIs This tutorial will show you how to use the Mobile SDK to query, update, and work with data in Swift.
 
-<h4>VI. Working With Cells</h4>
+<h4>Create A Table Based App</h4>
+Almost every iOS app uses a TableView for displaying data. For enterprise apps, understanding how to work with the TableView controls is critical. This tutorial will provide an introduction.
+
+<h4>Working With Cells</h4>
 Cells are the building blocks of great look apps. This tutorial will show you how to take a Mobile SDK results payload and work with Cells for displaying and manipulating data.
 
-<h4>VII. Using Autolayouts</h4>
+<h4>Using Autolayouts</h4>
 Apple's new Autolayout system provides the secret ingredient for enterprises who need to support multiple different iOS devices sizes. This tutorial will provide an introduction into how to be leverage autolayouts for your enterprise apps.
 
-<h4>VIII. Adding Actions To Cells</h4>
+<h4>Adding Actions To Cells</h4>
 iOS 8 introduces some great new features for adding actions to cells including slides and action views. This tutorial will teach you how we can use these actions and the Mobile SDK to persist changes to the cloud.
 
-<h4>VIX. Storyboards and Nagivation</h4>
+<h4>Updating Salesforce Data</h4>
+
+<h4>Storyboards and Nagivation</h4>
 One of my favorite features of Xcode, and building iOS apps, is storyboards and Seques. This tutorial will take our table-based app and implement some detail views and navigations.
 
-<h4>X. Advanced Mobile SDK techniques</h4>
+<h4>Advanced Mobile SDK techniques</h4>
 Up to this point, we have used the basics of the Salesforce Mobile SDK. This tutorial will dig into a few more advanced features and strategies to get the most of the Salesforce1 Platform.
 
-<h4>XI. Supporting Geolocation Fields In Salesforce</h4>
+<h4>Supporting Geolocation Fields In Salesforce</h4>
 Many mobile apps uses maps and geolocation to improve the user experience. This tutorial will teach you how to use maps, device geolocation, and the geolocation features of the Salesforce1 Platform.
 
-<h4>XII. Building Business Process for Mobile</h4>
+<h4>Building Business Process for Mobile</h4>
 Unlike consumer apps where processes usually start and end on the app, enterprise apps are typically extensions of broader business processes. This tutorial will use the Salesforce1 Platform Lightning Process Builder to visually create business processes, and then show you how to work with them via RESTful APIs directly in your mobile app for a killer enteprise UX.
 
-<h4>XIII. Creating Custom Logic in the Cloud</h4>
+<h4>Creating Custom Logic in the Cloud</h4>
 Enterprise mobile apps must be an extension to you business. This often means that existing logic, or new logic, is shared by different departments. This tutorial shows you how to create custom programatic logic in the cloud and then leverage it directly within your mobile app.
 
-<h4>XIV. Deploying and Testing on Devices</h4>
+<h4>Deploying and Testing on Devices</h4>
 Up until now, we have been developing entirely on the iOS simulator. It's time to get your app onto your physical device and test it out. This tutorial will teach you how to work with Apple's developer certificates, as well as cover tips on deployment if you are part of an (Apple Developer) enterprise team. 
 
-<h4>XV. Using Test Flight for Beta Testing</h4>
+<h4>Using Test Flight for Beta Testing</h4>
 TestFlight is an amazing tool for getting your app into the hands of your users before you list it officially in an appstore. This tutorial will show you how to do.
 
-<h4>XVI. Get Your App into the Public or Private Apps Stores</h4>
+<h4>Get Your App into the Public or Private Apps Stores</h4>
 It's time to put all of your hard work out there for the world to see. This tutorial will teach you how to get your app into the public Apple App Store, as well as how to list it in an enterprise app store just for your organization.
 
-<h4>XVII. Adding WatchKit</h4>
+<h4>Adding WatchKit</h4>
 WatchKit, the latest addition to the developer toolbelt, offers some unique value props for enterprise efficiency. This tutorial will show you how to connect the Mobile SDK and WatchKit for a killer enterprise app.
 
-<h4>XVIII. Adding HealthKit</h4>
+<h4>Adding HealthKit</h4>
 Health is going to be a huge focus for many connected devices. This tutorial will show you how to use HealthKit, and potentially use it to promote employee health and well being. 
 
-<h4>XIX. Adding HomeKit</h4>
+<h4>Adding HomeKit</h4>
 As we see more and more devices in our home connected to the internet, there are infinite possibilities for organizations to improve customer service and support. This tutorial will leverage the Salesforce Service Cloud and the Salesforce1 Platform to introduce you to next generation app ideas for the connected home.
 
-<h4>XX. Adding CloudKit</h4>
+<h4>Adding CloudKit</h4>
 As more and more businesses move their systems to the cloud, it will become increasingly important to connect across clouds for a comprehensive view of customers. This tutorial will show you how to leverage both the Salesforce1 Platform and CloudKit to understand more about the customers using your apps.
 
 <!--
