--- a/enterprise-ios/index.html
+++ b/enterprise-ios/index.html
@@ -47,7 +47,7 @@ The list of tutorials below provide a path to begin your journey in learning Swi
 <h4><a href="tutorial1/tutorial1.html">Enterprise Mobile App Prototypes with Flinto</a></h4>
 Almost every customer I talk to gets stuck on how to start designing their mobile app. This tutorial covers some very simple prototype techniques using pen and paper, and Flinto, a rapid prototyping tool to get user feedback early.
 
-<h4>Using Sketch To Design Your App</h4>
+<h4><a href="tutorial2/tutorial2.html">Using Sketch To Design Your App</a></h4>
 Like most of our there, we are not design experts, but that doesn't mean you can't create beautiful apps. This tutorial will take our basic prototypes and add some design using Sketch.
 
 <h4><a href="tutorial3/tutorial3.html">Prepare Your Base App with Swift and the Salesforce Mobile SDK</a></h4>
