updated with videos and additional related links

--- a/enterprise-ios/index.html
+++ b/enterprise-ios/index.html
@@ -53,37 +53,23 @@ Like most of our there, we are not design experts, but that doesn't mean you can
 <h4><a href="tutorial3/tutorial3.html">Prepare Your Base App with Swift and the Salesforce Mobile SDK</a></h4>
 The Mobile SDK currently provides Objective-C based template projects. This tutorial shows you how to take these template projects, show you how to handle authentication, and quickly make them Swift and Storyboard ready.
 
-<h4><a href="tutorial4/tutorial4.html">Querying Salesforce Data</a></h4>
-Now that we have a basic idea of working with tables, we need to learn how to call and handle data from the Salesforce REST APIs This tutorial will show you how to use the Mobile SDK to query, update, and work with data in Swift.
+<h4><a href="tutorial4/tutorial4.html">Using Salesforce  as a Mobile Backend</a></h4>
+It's time to configure our backend data model and cloud logic. This tutorial will show you how to use the Salesforce1 platform as an MBaaS to create data objects, add custom cloud logic and connected app definitions.
 
-<h4>Create A Table Based App</h4>
-Almost every iOS app uses a TableView for displaying data. For enterprise apps, understanding how to work with the TableView controls is critical. This tutorial will provide an introduction.
+<h4>Learning Swift</h4>
+Swift, Apple's new development language is incredibly easy to use. This tutorial will introduce you to XCode, the Apple Developer IDE, and use the Playground feature to teach you the basics of Swift.
 
-<h4>Working With Cells</h4>
-Cells are the building blocks of great look apps. This tutorial will show you how to take a Mobile SDK results payload and work with Cells for displaying and manipulating data.
+<h4>Intro to Storyboards, UI and Controllers</h4>
+With a basic understanding of Swift under our belt, this tutorial will introduce you to the UI controls and framework within XCode. 
 
-<h4>Using Autolayouts</h4>
-Apple's new Autolayout system provides the secret ingredient for enterprises who need to support multiple different iOS devices sizes. This tutorial will provide an introduction into how to be leverage autolayouts for your enterprise apps.
+<h4>Working With Data and the Mobile SDK</h4>
+At the core of everything we are doing is retrieving data from Salesforce via the Mobile SDK. This tutorial will teach you how to perform standard CRUD operations, manage user tokens, and work with the Mobile SDK responses and delegates.
 
-<h4>Adding Actions To Cells</h4>
-iOS 8 introduces some great new features for adding actions to cells including slides and action views. This tutorial will teach you how we can use these actions and the Mobile SDK to persist changes to the cloud.
+<h4>Connecting ViewControllers and Tables to Salesforce Data</h4>
+Now that we have our UI and data, we can connect everyhthing together to finish off our mobile app. 
 
-<h4>Updating Salesforce Data</h4>
-
-<h4>Storyboards and Nagivation</h4>
-One of my favorite features of Xcode, and building iOS apps, is storyboards and Seques. This tutorial will take our table-based app and implement some detail views and navigations.
-
-<h4>Advanced Mobile SDK techniques</h4>
-Up to this point, we have used the basics of the Salesforce Mobile SDK. This tutorial will dig into a few more advanced features and strategies to get the most of the Salesforce1 Platform.
-
-<h4>Supporting Geolocation Fields In Salesforce</h4>
-Many mobile apps uses maps and geolocation to improve the user experience. This tutorial will teach you how to use maps, device geolocation, and the geolocation features of the Salesforce1 Platform.
-
-<h4>Building Business Process for Mobile</h4>
-Unlike consumer apps where processes usually start and end on the app, enterprise apps are typically extensions of broader business processes. This tutorial will use the Salesforce1 Platform Lightning Process Builder to visually create business processes, and then show you how to work with them via RESTful APIs directly in your mobile app for a killer enteprise UX.
-
-<h4>Creating Custom Logic in the Cloud</h4>
-Enterprise mobile apps must be an extension to you business. This often means that existing logic, or new logic, is shared by different departments. This tutorial shows you how to create custom programatic logic in the cloud and then leverage it directly within your mobile app.
+<h4>Adding Sync and Encrypted Offline Support</h4>
+Many enterprises require the ability to sync data and still information securely offline. This tutorial which teach you have to use SmartSync and SmartStore within the Mobile SDK.
 
 <h4>Deploying and Testing on Devices</h4>
 Up until now, we have been developing entirely on the iOS simulator. It's time to get your app onto your physical device and test it out. This tutorial will teach you how to work with Apple's developer certificates, as well as cover tips on deployment if you are part of an (Apple Developer) enterprise team. 
