fixed tutorial ordering

--- a/enterprise-ios/index.html
+++ b/enterprise-ios/index.html
@@ -53,7 +53,7 @@ Like most of our there, we are not design experts, but that doesn't mean you can
 <h4><a href="tutorial3/tutorial3.html">Prepare Your Base App with Swift and the Salesforce Mobile SDK</a></h4>
 The Mobile SDK currently provides Objective-C based template projects. This tutorial shows you how to take these template projects, show you how to handle authentication, and quickly make them Swift and Storyboard ready.
 
-<h4><a href="tutorial4/tutorial4.html">Using Salesforce  as a Mobile Backend</a></h4>
+<h4><a href="tutorial5/tutorial5.html">Using Salesforce  as a Mobile Backend</a></h4>
 It's time to configure our backend data model and cloud logic. This tutorial will show you how to use the Salesforce1 platform as an MBaaS to create data objects, add custom cloud logic and connected app definitions.
 
 <h4>Learning Swift</h4>
@@ -62,7 +62,7 @@ Swift, Apple's new development language is incredibly easy to use. This tutorial
 <h4>Intro to Storyboards, UI and Controllers</h4>
 With a basic understanding of Swift under our belt, this tutorial will introduce you to the UI controls and framework within XCode. 
 
-<h4>Working With Data and the Mobile SDK</h4>
+<h4><a href="tutorial4/tutorial4.html">Working With Data and the Mobile SDK</a></h4>
 At the core of everything we are doing is retrieving data from Salesforce via the Mobile SDK. This tutorial will teach you how to perform standard CRUD operations, manage user tokens, and work with the Mobile SDK responses and delegates.
 
 <h4>Connecting ViewControllers and Tables to Salesforce Data</h4>
