added enterprise ux

--- a/enterprise-ios/tutorial5/tutorial5.html
+++ b/enterprise-ios/tutorial5/tutorial5.html
@@ -70,9 +70,6 @@
 
 <p>Very few organizations may be considered green field with no existing data sources such as on-premises systems, existing databases, and other cloud apps. Mobile apps for the enterprise must be an extension of these existing data sources. A enterprise mobile platform must <a href="http://www.salesforce.com/platform/services/how-you-integrate/">integrate with existing data sources</a> and expose them to mobile developers using modern RESTful APIs that respect corporate roles and profiles. The result is the ability to innovate quickly using modern tools without the need to code directly in arcane legacy systems.</p>
 
-<figure>
-<img src="images/enterpriseux.png" width="560" height="315" alt="" />
-</figure>
 
 
 <h3 id="abilitytoquicklycreatecloud-basedcustomlogic">Ability to quickly create cloud-based custom logic</h3>
@@ -85,7 +82,11 @@
 
 <h3 id="supportforwebhybridandnativeapps">Support for Web, Hybrid, and Native apps</h3>
 
-<p>Organizations often select mobile app strategies - <a href="https://developer.salesforce.com/page/Native,_HTML5,_or_Hybrid:_Understanding_Your_Mobile_Application_Development_Options">web, hybrid, or native</a> - based on many business factors: available technical resources, number of devices and platforms to support, and app level features. Mobile backends must promote the ability to create and share logic and data across multiple apps, and make it possible for organizations to select the best mobile app strategy on a per app basis. As mobile continues to become the defacto tool for conducting business, a mobile platform strategy that supports all mobile app dev models becomes crucial for long term success</p>
+<p>Organizations often select mobile app strategies - <a href="https://developer.salesforce.com/page/Native,_HTML5,_or_Hybrid:_Understanding_Your_Mobile_Application_Development_Options">web, hybrid, or native</a> - based on many business factors: available technical resources, number of devices and platforms to support, and app level features. Mobile backends must promote the ability to create and share logic and data across multiple apps, and make it possible for organizations to select the best mobile app strategy on a per app basis. As mobile continues to become the defacto tool for conducting business, a mobile platform strategy that supports all mobile app dev models becomes crucial for long term success. I often refer to this mobile strategy as an enterprise UX - how mobile apps extend new and existing business processes. Whenever you build apps for the enterprise, always consider the Enterprise UX. If you don't, your apps will likely fail to be adopted.</p>
+
+<figure>
+<img src="images/enterpriseux.png" width="560" height="315" alt="" />
+</figure>
 
 <p>That's enough of MBaaS theory. Let's get back to building our app! During this tutorial we are going to use many of these features to rapidly create a mobile backend for our tasks app. Don't worry if you have never used salesforce.com before. The tools are very intuitive. We'll have our backend created in a snap.</p>
 
