updated uicolor.io note

--- a/enterprise-ios/tutorial2/tutorial2.html
+++ b/enterprise-ios/tutorial2/tutorial2.html
@@ -83,7 +83,7 @@
 <img src="images/palleton.png" alt="" />
 </figure>
 
-<p>Let's add the palette to our sketch project now.</p>
+<p>Let's add the palette to our sketch project now. Once you get to building your app in XCode, we are going to have to convert these color schemes to UIColors in iOS. Make sure you bookmark <a href="http://uicolor.io/#/hex-to-ui">uicolor.io</a> for later reference. This site is an invaluable tool to convert between color formats, and it even generates the iOS code (in Swift or Objective-C) for you!</p>
 
 <p><iframe width="560" height="315" src="https://www.youtube.com/embed/sO4DyEYXua8" frameborder="0" allowfullscreen></iframe></p>
 
