updated iosfonts.io ref

--- a/enterprise-ios/tutorial2/tutorial2.html
+++ b/enterprise-ios/tutorial2/tutorial2.html
@@ -101,6 +101,8 @@
 
 <p>The third important element of style you should be familiar with is fonts. Fonts can greatly improve the appearance and usability of your app. Since we are building mobile apps, it is advisable to go with modern clean fonts that don't use serifs (those little wings on the ends of fancy fonts). You don't need to spend too much time debating which font to use. For 90% of the apps I build I select either Helvetica Neue, Garamond, Futura, or Avenir Next. Then, within my app, I might adjust the weight of a particular font depending on whether it is a title, subheading, body etc. </p>
 
+<p>As you get further along in your iOS app development, there are often times when you need to know what fonts are available on which versions of iOS; Occasionally you even need to refer to a specific font name within code. <a href="iosfonts.com">iosfonts.com</a> is a great reference to bookmark and refer to frequently.
+
 <h2 id="backtothetaskathand">Back to the task at hand</h2>
 
 <p>Ok, perhaps that was a little cheesy, but I think that is enough style theory for now. Let's finish off our app design. We will spend our time working on the task list screen during this tutorial. I will leave the other screens for homework, or you can download the completed sketch file <a href="">here</a>.</p>
