--- a/enterprise-ios/index.html
+++ b/enterprise-ios/index.html
@@ -92,6 +92,9 @@ As we see more and more devices in our home connected to the internet, there are
 <h4>Adding CloudKit</h4>
 As more and more businesses move their systems to the cloud, it will become increasingly important to connect across clouds for a comprehensive view of customers. This tutorial will show you how to leverage both the Salesforce1 Platform and CloudKit to understand more about the customers using your apps.
 
+<h4>Adding Twitter Crashlytics</h4>
+Like it or not, apps crash. The most important thing is knowing why. This tutorial will leverage Twitter Fabric to include Crashlytics to gain valuable insights why your app crashed, and how to fix it - fast.
+
 <!--
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
