added modulel sections

--- a/enterprise-ios/index.html
+++ b/enterprise-ios/index.html
@@ -44,7 +44,7 @@
 <h3>The Tutorials</h3>
 The list of tutorials below provide a path to begin your journey in learning Swift and building enterprise mobile apps. These tutorials are intended to be a living, and evolving, resource. The goal is to produce a new tutorial roughly each week. 
 
-<h3>Design</h3>
+<h3><i>Design</i></h3>
 
 <h4><a href="tutorial1/tutorial1.html">Enterprise Mobile App Prototypes with Flinto</a></h4>
 Almost every customer I talk to gets stuck on how to start designing their mobile app. This tutorial covers some very simple prototype techniques using pen and paper, and Flinto, a rapid prototyping tool to get user feedback early.
@@ -58,7 +58,7 @@ The Mobile SDK currently provides Objective-C based template projects. This tuto
 <h4><a href="designing-with-storyboards/designing-with-storyboards.html">Take Your Designs and add to Xcode</a></h4>
 In our last design tutorial, we will take the artboards and add them to Xcode. This tutorial will provide a brief introduction to storyboards, seques, and handling tap gestures. 
 
-<h3>Introduction to iOS</h3>
+<h3><i>Introduction to iOS</i></h3>
 
 <h4>Learning Swift</h4>
 Swift, Apple's new development language is incredibly easy to use. This tutorial will introduce you to XCode, the Apple Developer IDE, and use the Playground feature to teach you the basics of Swift.
@@ -79,7 +79,7 @@ Now that we have our UI and data, we can connect everyhthing together to finish 
 <h4>Adding Sync and Encrypted Offline Support</h4>
 Many enterprises require the ability to sync data and still information securely offline. This tutorial which teach you have to use SmartSync and SmartStore within the Mobile SDK.
 
-<h3>Deployment</h3>
+<h3><i>Deployment</i></h3>
 
 <h4>Deploying and Testing on Devices</h4>
 Up until now, we have been developing entirely on the iOS simulator. It's time to get your app onto your physical device and test it out. This tutorial will teach you how to work with Apple's developer certificates, as well as cover tips on deployment if you are part of an (Apple Developer) enterprise team. 
@@ -90,7 +90,7 @@ TestFlight is an amazing tool for getting your app into the hands of your users 
 <h4>Get Your App into the Public or Private Apps Stores</h4>
 It's time to put all of your hard work out there for the world to see. This tutorial will teach you how to get your app into the public Apple App Store, as well as how to list it in an enterprise app store just for your organization.
 
-<h3>iOS Everywhere!</h3>
+<h3><i>iOS Everywhere!</i></h3>
 
 <h4>Adding WatchKit</h4>
 WatchKit, the latest addition to the developer toolbelt, offers some unique value props for enterprise efficiency. This tutorial will show you how to connect the Mobile SDK and WatchKit for a killer enterprise app.
